added responsive for page

--- a/app/calculator.html
+++ b/app/calculator.html
@@ -118,23 +118,23 @@
                     <ul class="calculator__color_list">
                         <li>
                             <span style="background-color: #fff"></span>
-                            Белый
+                            <small>Белый</small>
                         </li>
                         <li>
                             <span style="background-color: #5C2401"></span>
-                            Дуб
+                            <small>Дуб</small>
                         </li>
                         <li>
                             <span style="background-color: #C4C5C5"></span>
-                            Металик
+                            <small>Металик</small>
                         </li>
                         <li>
                             <span style="background-color: #ECDED1"></span>
-                            Бежевый
+                            <small>Бежевый</small>
                         </li>
                         <li>
                             <span style="background-color: #E2E2E2"></span>
-                            Серый
+                            <small>Серый</small>
                         </li>
                     </ul>
                 </div>
@@ -301,6 +301,259 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- table for screen <= 767px MOBILE -->
+                <div class="table__wrap-mob">
+                    <h5 class="table__title d-flex justify-content-between align-items-center">
+                        Trend
+                        <small> ролеты из профилей серии Trend, ТМ "Alutech"</small>
+                    </h5>
+                    <div class="table__header d-flex align-items-center">
+                        <div class="table__col-6">Типы профилей для изготовления полотна</div>
+                        <div class="table__col-6 ">
+                            <div class="table__col-12">
+                                Тип управления ролетой
+                            </div>
+                            <div class="table__col-12 d-flex">
+                                <span>Пружина/ключ</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="table__body bg-white-shadow">
+                        <div class="table__row d-flex">
+                            <div class="table__col-1"><img src="image/icons/question-mark.svg" alt="question-mark">
+                                <span>Пенонаполненый профиль</span></div>
+                            <div class="table__col-11">
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li>PD/39N</li>
+                                        <li>PD/45N</li>
+                                        <li>PD/55mN</li>
+                                        <li>PD/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li><a href="#">3 564 грн.</a></li>
+                                        <li><a href="#">3 565 грн.</a></li>
+                                        <li><a href="#">3 566 грн.</a></li>
+                                        <li><a href="#"></a></li>
+                                    </ul>
+                                </div>
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li class="empti"></li>
+                                        <li>PD/39N</li>
+                                        <li>PD/45N</li>
+                                        <li>PD/55mN</li>
+                                        <li>PD/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li class="title">Шнур/касета</li>
+                                        <li><a href="#">3 742,2 грн.</a></li>
+                                        <li><a href="#">3 743,25 грн.</a></li>
+                                        <li><a href="#">3 744,3 грн.</a></li>
+                                        <li><a href="#"></a></li>
+                                    </ul>
+                                </div>
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li class="empti"></li>
+                                        <li>PD/39N</li>
+                                        <li>PD/45N</li>
+                                        <li>PD/55mN</li>
+                                        <li>PD/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li class="title">Двигатель</li>
+                                        <li><a href="#">4 276,8 грн.</a></li>
+                                        <li><a href="#">4 278 грн.</a></li>
+                                        <li><a href="#">4 279,2 грн.</a></li>
+                                        <li><a href="#"></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="table__wrap-mob">
+                    <h5 class="table__title d-flex justify-content-between align-items-center">
+                        Prestige
+                        <small> ролеты из профилей серии Prestige, ТМ "Alutech"</small>
+                    </h5>
+                    <div class="table__header d-flex align-items-center">
+                        <div class="table__col-6">Типы профилей для изготовления полотна</div>
+                        <div class="table__col-6 ">
+                            <div class="table__col-12">
+                                Тип управления ролетой
+                            </div>
+                            <div class="table__col-12 d-flex">
+                                <span>Пружина</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="table__body bg-white-shadow">
+                        <div class="table__row d-flex">
+                            <div class="table__col-1"><img src="image/icons/question-mark.svg" alt="question-mark">
+                                <span>Пенонаполненый профиль</span></div>
+                            <div class="table__col-11">
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li>AR/40N</li>
+                                        <li>AR/555N</li>
+                                        <li>AG/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li><a href="#">3 564 грн.</a></li>
+                                        <li><a href="#">3 565 грн.</a></li>
+                                        <li><a href="#">3 566 грн.</a></li>
+                                    </ul>
+                                </div>
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li class="empti"></li>
+                                        <li>AR/40N</li>
+                                        <li>AR/555N</li>
+                                        <li>AG/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li class="title">Шнур</li>
+                                        <li><a href="#">3 742,2 грн.</a></li>
+                                        <li><a href="#">3 743,25 грн.</a></li>
+                                        <li><a href="#">3 744,3 грн.</a></li>
+                                    </ul>
+                                </div>
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li class="empti"></li>
+                                        <li>AR/40N</li>
+                                        <li>AR/555N</li>
+                                        <li>AG/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li class="title">Двигатель</li>
+                                        <li><a href="#">4 276,8 грн.</a></li>
+                                        <li><a href="#">4 278 грн.</a></li>
+                                        <li><a href="#">4 279,2 грн.</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="table__wrap-mob">
+                    <h5 class="table__title d-flex justify-content-between align-items-center">
+                        Security
+                        <small> ролеты из решетчатого профиля Security, ТМ "Alutech"</small>
+                    </h5>
+                    <div class="table__header d-flex align-items-center">
+                        <div class="table__col-6">Типы профилей для изготовления полотна</div>
+                        <div class="table__col-6 ">
+                            <div class="table__col-12">
+                                Тип управления ролетой
+                            </div>
+                            <div class="table__col-12 d-flex">
+                                <span>Пружина</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="table__body bg-white-shadow">
+                        <div class="table__row d-flex">
+                            <div class="table__col-1"><img src="image/icons/question-mark.svg" alt="question-mark">
+                                <span>Пенонаполненый профиль</span></div>
+                            <div class="table__col-11">
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li>AR/40N</li>
+                                        <li>AR/555N</li>
+                                        <li>AG/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li><a href="#">3 564 грн.</a></li>
+                                        <li><a href="#">3 565 грн.</a></li>
+                                        <li><a href="#">3 566 грн.</a></li>
+                                    </ul>
+                                </div>
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li class="empti"></li>
+                                        <li>AR/40N</li>
+                                        <li>AR/555N</li>
+                                        <li>AG/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li class="title">Шнур</li>
+                                        <li><a href="#">3 742,2 грн.</a></li>
+                                        <li><a href="#">3 743,25 грн.</a></li>
+                                        <li><a href="#">3 744,3 грн.</a></li>
+                                    </ul>
+                                </div>
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li class="empti"></li>
+                                        <li>AR/40N</li>
+                                        <li>AR/555N</li>
+                                        <li>AG/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li class="title">Двигатель</li>
+                                        <li><a href="#">4 276,8 грн.</a></li>
+                                        <li><a href="#">4 278 грн.</a></li>
+                                        <li><a href="#">4 279,2 грн.</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="table__col-12 d-flex">
+                            <div class="table__col-6 empti"></div>
+                            <div class="table__col-6 title ">Пружина</div>
+                        </div>
+                        <div class="table__row d-flex">
+                            <div class="table__col-1"><img src="image/icons/question-mark.svg" alt="question-mark">
+                                <span>Пенонаполненый профиль</span></div>
+                            <div class="table__col-11">
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li>AR/40N</li>
+                                        <li>AR/555N</li>
+                                        <li>AG/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li><a href="#">3 564 грн.</a></li>
+                                        <li><a href="#">3 565 грн.</a></li>
+                                        <li><a href="#">3 566 грн.</a></li>
+                                    </ul>
+                                </div>
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li class="empti"></li>
+                                        <li>AR/40N</li>
+                                        <li>AR/555N</li>
+                                        <li>AG/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li class="title">Шнур</li>
+                                        <li><a href="#">3 742,2 грн.</a></li>
+                                        <li><a href="#">3 743,25 грн.</a></li>
+                                        <li><a href="#">3 744,3 грн.</a></li>
+                                    </ul>
+                                </div>
+                                <div class="table__row-mob d-flex">
+                                    <ul class="table__col-5">
+                                        <li class="empti"></li>
+                                        <li>AR/40N</li>
+                                        <li>AR/555N</li>
+                                        <li>AG/77</li>
+                                    </ul>
+                                    <ul class="table__col-7">
+                                        <li class="title">Двигатель</li>
+                                        <li><a href="#">4 276,8 грн.</a></li>
+                                        <li><a href="#">4 278 грн.</a></li>
+                                        <li><a href="#">4 279,2 грн.</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -308,7 +561,7 @@
             <div class="container">
                 <div class="download-catalog__wrap bg-white-shadow">
                     <div class="row">
-                        <div class="col-12 col-md-5 offset-md-1">
+                        <div class="col-12 col-md-5 offset-lg-1">
                             <h3 class="download-catalog__title">Скачайте прайсы с актуальными ценами на весь ассортимент
                             </h3>
                             <p>Цены обновлены 2 дня назад (28.05.2019)</p>
