--- a/app/calculator.html
+++ b/app/calculator.html
@@ -167,7 +167,7 @@
                                 <li>PD/77</li>
                             </ul>
                             <ul class="table__col-2">
-                                <li><a href="#">3 564 грн.</a></li>
+                                <li><a href="calculator-goods.html">3 564 грн.</a></li>
                                 <li><a href="#">3 565 грн.</a></li>
                                 <li><a href="#">3 566 грн.</a></li>
                                 <li><a href="#"></a></li>
