--- a/app/index.html
+++ b/app/index.html
@@ -406,7 +406,96 @@
 					<div class="tab-content" id="pills-tabContent">
 						<div class="tab-pane fade show active" id="pills-client" role="tabpanel"
 							aria-labelledby="pills-client-tab">
-							<div class="slider-reviews">
+							<div class="slider-reviews slider-client">
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+											<!-- <iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
+												allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+												allowfullscreen></iframe> -->
+										</div>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+											<!-- <iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
+												allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+												allowfullscreen></iframe> -->
+										</div>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
+											vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
+											ac blandit elit tinci</p>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<div class="video">
+											<!-- <iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
+												allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+												allowfullscreen></iframe> -->
+										</div>
+									</div>
+								</div>
+								<div class="container slider-dark__arrows">
+									<button class="slider-dark__prev client-prev"></button>
+									<div class="slick-counter"><span class="current"></span><span class="total"></span>
+									</div>
+									<button class="slider-dark__next client-next "></button>
+								</div>
+							</div>
+						</div>
+						<div class="tab-pane fade" id="pills-partners" role="tabpanel"
+							aria-labelledby="pills-partners-tab">
+							<div class="slider-reviews slider-partners">
 								<div class="slider-reviews__item">
 									<div class="reviews__header d-flex">
 										<div class="reviews__avatar">
@@ -465,6 +554,35 @@
 											ac blandit elit tinci</p>
 									</div>
 								</div>
+								<div class="container slider-dark__arrows">
+									<button class="slider-dark__prev partners-prev"></button>
+									<div class="slick-counter"><span class="current"></span><span class="total"></span>
+									</div>
+									<button class="slider-dark__next partners-next "></button>
+								</div>
+							</div>
+						</div>
+						<div class="tab-pane fade" id="pills-emloees" role="tabpanel"
+							aria-labelledby="pills-emloees-tab">
+							<div class="slider-reviews slider-emloees">
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
+											vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
+											ac blandit elit tinci</p>
+									</div>
+								</div>
 								<div class="slider-reviews__item">
 									<div class="reviews__header d-flex">
 										<div class="reviews__avatar">
@@ -479,27 +597,73 @@
 									</div>
 									<div class="reviews__desc">
 										<div class="video">
-											<iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
+											<!-- <iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
 												allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-												allowfullscreen></iframe>
+												allowfullscreen></iframe> -->
 										</div>
 									</div>
 								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
+											vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
+											ac blandit elit tinci</p>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
+											vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
+											ac blandit elit tinci</p>
+									</div>
+								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
+											vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
+											ac blandit elit tinci</p>
+									</div>
+								</div>
 								<div class="container slider-dark__arrows">
-									<button class="slider-dark__prev slider-reviews-prev"></button>
+									<button class="slider-dark__prev emloees-prev"></button>
 									<div class="slick-counter"><span class="current"></span><span class="total"></span>
 									</div>
-									<button class="slider-dark__next slider-reviews-next "></button>
+									<button class="slider-dark__next emloees-next "></button>
 								</div>
 							</div>
-						</div>
-						<div class="tab-pane fade" id="pills-partners" role="tabpanel"
-							aria-labelledby="pills-partners-tab">
-							Клиентов
-						</div>
-						<div class="tab-pane fade" id="pills-emloees" role="tabpanel"
-							aria-labelledby="pills-emloees-tab">
-							Партнеров
 						</div>
 					</div>
 				</div>
