--- a/app/index.html
+++ b/app/index.html
@@ -554,6 +554,24 @@
 											ac blandit elit tinci</p>
 									</div>
 								</div>
+								<div class="slider-reviews__item">
+									<div class="reviews__header d-flex">
+										<div class="reviews__avatar">
+											<img src="image/image-1.png" alt="">
+										</div>
+										<span class="icon-social"><img src="image/icons/facebook.svg" alt=""></span>
+										<div class="reviews__title">
+											<h4>Диана Шорохова</h4>
+											<p>Владелец магазина “Туфелька”
+												в торговом центре</p>
+										</div>
+									</div>
+									<div class="reviews__desc">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
+											vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
+											ac blandit elit tinci</p>
+									</div>
+								</div>
 								<div class="container slider-dark__arrows">
 									<button class="slider-dark__prev partners-prev"></button>
 									<div class="slick-counter"><span class="current"></span><span class="total"></span>
