added image cloro roletta and change colon on click

--- a/app/roletta.html
+++ b/app/roletta.html
@@ -243,57 +243,69 @@
                 <div class="roletta-assortement__color bg-white-shadow">
                     <div class="group-radio-input">
                         <h3>Популярные цвета</h3>
-                        <label class="label-radio-input" style="background-color: #fff; border-color: #DFDFDF">
+                        <label class="label-radio-input" style="background-color: #fff; border-color: #DFDFDF"
+                            data-src="image/roletta/color-roletta/white.png">
                             <input type="radio" name="color">
                             <span class="radio-input-checkmark"
                                 style="background-color: #fff; border-color: #DFDFDF"></span>
                         </label>
-                        <label class="label-radio-input" style="background-color: #5C2401">
-                            <input type="radio" name="color">
+                        <label class="label-radio-input" style="background-color: #5C2401"
+                            data-src="image/roletta/color-roletta/light-brown.png">
+                            <input type="radio" name="color" checked>
                             <span class="radio-input-checkmark" style="background-color: #5C2401"></span>
                         </label>
-                        <label class="label-radio-input" style="background-color: #C4C5C5">
+                        <label class="label-radio-input" style="background-color: #C4C5C5"
+                            data-src="image/roletta/color-roletta/gray.png">
                             <input type="radio" name="color">
                             <span class="radio-input-checkmark" style="background-color: #C4C5C5"></span>
                         </label>
-                        <label class="label-radio-input" style="background-color: #ECDED1">
+                        <label class="label-radio-input" style="background-color: #ECDED1"
+                            data-src="image/roletta/color-roletta/beige.png">
                             <input type="radio" name="color">
                             <span class="radio-input-checkmark" style="background-color: #ECDED1"></span>
                         </label>
-                        <label class="label-radio-input" style="background-color: #E2E2E2">
+                        <label class="label-radio-input" style="background-color: #E2E2E2"
+                            data-src="image/roletta/color-roletta/gray-white.png">
                             <input type="radio" name="color">
                             <span class="radio-input-checkmark" style="background-color: #E2E2E2"></span>
                         </label>
-                        <label class="label-radio-input" style="background-color: #A34E24">
+                        <label class="label-radio-input" style="background-color: #A34E24"
+                            data-src="image/roletta/color-roletta/brown.png">
                             <input type="radio" name="color">
                             <span class="radio-input-checkmark" style="background-color: #A34E24"></span>
                         </label>
-                        <label class="label-radio-input" style="background-color: #865522">
+                        <label class="label-radio-input" style="background-color: #865522"
+                            data-src="image/roletta/color-roletta/dark-brown.png">
                             <input type="radio" name="color">
                             <span class="radio-input-checkmark" style="background-color: #865522"></span>
                         </label>
-                        <label class="label-radio-input" style="background-color: #32454D">
+                        <label class="label-radio-input" style="background-color: #32454D"
+                            data-src="image/roletta/color-roletta/navy-blue.png">
                             <input type="radio" name="color">
                             <span class="radio-input-checkmark" style="background-color: #32454D"></span>
                         </label>
-                        <label class="label-radio-input" style="background-color: #21201F">
+                        <label class="label-radio-input" style="background-color: #21201F"
+                            data-src="image/roletta/color-roletta/dark.png">
                             <input type="radio" name="color">
                             <span class="radio-input-checkmark" style="background-color: #21201F"></span>
                         </label>
-                        <label class="label-radio-input" style="background-color: #003C80">
+                        <label class="label-radio-input" style="background-color: #003C80"
+                            data-src="image/roletta/color-roletta/blue.png">
                             <input type="radio" name="color">
                             <span class="radio-input-checkmark" style="background-color: #003C80"></span>
                         </label>
-                        <label class="label-radio-input" style="background-color: #005D31">
+                        <label class="label-radio-input" style="background-color: #005D31"
+                            data-src="image/roletta/color-roletta/green.png">
                             <input type="radio" name="color">
                             <span class="radio-input-checkmark" style="background-color: #005D31"></span>
                         </label>
-                        <label class="label-radio-input" style="background-color: #EFA400">
+                        <label class="label-radio-input" style="background-color: #EFA400"
+                            data-src="image/roletta/color-roletta/yellow.png">
                             <input type="radio" name="color">
                             <span class="radio-input-checkmark" style="background-color: #EFA400"></span>
                         </label>
                     </div>
-                    <img src="image/roletta/roletta-2.png" alt="">
+                    <img src="image/roletta/color-roletta/light-brown.png" alt="roletta" id="colorRoletta">
                 </div>
             </div>
         </section>
