added new image and new page

--- a/app/index.html
+++ b/app/index.html
@@ -421,9 +421,9 @@
 									</div>
 									<div class="reviews__desc">
 										<div class="video">
-											<!-- <iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
+											<iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
 												allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-												allowfullscreen></iframe> -->
+												allowfullscreen></iframe>
 										</div>
 									</div>
 								</div>
@@ -441,9 +441,9 @@
 									</div>
 									<div class="reviews__desc">
 										<div class="video">
-											<!-- <iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
+											<iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
 												allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-												allowfullscreen></iframe> -->
+												allowfullscreen></iframe>
 										</div>
 									</div>
 								</div>
@@ -479,9 +479,9 @@
 									</div>
 									<div class="reviews__desc">
 										<div class="video">
-											<!-- <iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
+											<iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
 												allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-												allowfullscreen></iframe> -->
+												allowfullscreen></iframe>
 										</div>
 									</div>
 								</div>
@@ -596,9 +596,9 @@
 									</div>
 									<div class="reviews__desc">
 										<div class="video">
-											<!-- <iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
+											<iframe src="https://www.youtube.com/embed/NE6pANWJGuU" frameborder="0"
 												allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-												allowfullscreen></iframe> -->
+												allowfullscreen></iframe>
 										</div>
 									</div>
 								</div>
