--- a/app/promotion_open.html
+++ b/app/promotion_open.html
@@ -91,7 +91,14 @@
 			<div class="top_block">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-9">
+						<div class="col-lg-7">
+							<ul class="bread-crumbs">
+									<li class="bread-crumbs__item"><a href="#">Главная</a></li>
+									<li class="bread-crumbs__item"><a href="#">Ассортимент</a></li>
+									<li class="bread-crumbs__item"><span>Описание акции. Коротко и по сути. Остальн...</span></li>
+								</ul>
+						</div>
+						<div class="col-lg-9 col-md-10">
 							<p class="top_title">
 									Описание акции. Коротко и по сути. Остальное внутри! Открываешь и смотришь
 							</p>
@@ -113,7 +120,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-5">
+                        <div class="col-lg-5 offset-lg-1">
                             <div class="promotions__timer">
 								<span>До конца осталось:</span>
 								<ul class="timer d-flex" data-time="Sep 01 2019 00:00:00">
