--- a/app/assortment-haeding.html
+++ b/app/assortment-haeding.html
@@ -85,7 +85,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="assortment-heading__page">
         <section class="top-baner">
             <img src="image/assortement-heading/bg-assortement-heading.png" alt="" class="top-baner__img">
             <div class="container">
@@ -104,12 +104,12 @@
             </div>
         </section>
 
-        <section class="assortement-headeing">
+        <section class="assortment-heading">
             <div class="container">
-                <h3 class="assortement-headeing__title">Есть разные виды автоматики</h3>
+                <h3 class="assortment-heading__title">Есть разные виды автоматики</h3>
                 <div class="row">
                     <div class="col-12 col-md-8">
-                        <a href="#" class="assortement-headeing__card">
+                        <a href="#" class="assortement__card">
                             <img src="image/assortement-heading/image-1.png" alt="">
                             <h4>Для откатных<br /> ворот</h4>
                             <div class="assortement__hover">
@@ -119,7 +119,7 @@
                         </a>
                     </div>
                     <div class="col-12 col-md-4">
-                        <a href="#" class="assortement-headeing__card">
+                        <a href="#" class="assortement__card">
                             <img src="image/assortement-heading/image-2.png" alt="">
                             <h4>Для распашных<br /> ворот</h4>
                             <div class="assortement__hover">
@@ -129,7 +129,7 @@
                         </a>
                     </div>
                     <div class="col-12 col-md-4">
-                        <a href="#" class="assortement-headeing__card">
+                        <a href="#" class="assortement__card">
                             <img src="image/assortement-heading/image-3.png" alt="">
                             <h4>Для гаражных секционных ворот</h4>
                             <div class="assortement__hover">
@@ -139,7 +139,7 @@
                         </a>
                     </div>
                     <div class="col-12 col-md-4">
-                        <a href="#" class="assortement-headeing__card">
+                        <a href="#" class="assortement__card">
                             <img src="image/assortement-heading/image-4.png" alt="">
                             <h4>Для промышленных секционных ворот</h4>
                             <div class="assortement__hover">
@@ -149,7 +149,7 @@
                         </a>
                     </div>
                     <div class="col-12 col-md-4">
-                        <a href="#" class="assortement-headeing__card">
+                        <a href="#" class="assortement__card">
                             <img src="image/assortement-heading/image-5.png" alt="">
                             <h4>Шлагбаумы</h4>
                             <div class="assortement__hover">
@@ -158,6 +158,35 @@
                             </div>
                         </a>
                     </div>
+                </div>
+                <div class="assortment-heading__desc bg-white-shadow">
+                    <h3>Ворота можно условно подобрать по весу:</h3>
+                    <p>Прежде, чем купить автоматику для ворот, необходимо правильно подобрать ее исходя из веса створки
+                        ворот, на которую будет устанавливаться привод.</p>
+                    <ul>
+                        <li>легкие ворота – до 500 кг;</li>
+                        <li>средние – до 1000 кг;
+                        </li>
+                        <li>тяжелые – до 2000 кг.</li>
+                    </ul>
+                    <img src="image/assortement-heading/img.png" />
+                    <p>Еще одним важным продуктом является автоматика для гаражных ворот. Это потолочный
+                        электропривод, который также управляется с пульта д/у. Выбор типа привода для гаражных ворот
+                        также
+                        зависит от их веса и габаритов. Автоматика для секционных ворот делится на два основных типа:
+                        для
+                        гаражных ворот (бытовых) и для промышленных ворот. Электропривода для промышленных ворот более
+                        мощные, имеют больший ресурс циклов работы и предназначены для ворот с большим весом и
+                        габаритами.</p>
+                    <p>Отдельная категория – это автоматика для роллет. Она являет собой внутривальный привод,
+                        который,в отличии от автоматики для ворот, устанавливается внутри самой конструкции роллет
+                        и не виден снаружи. Управление производиться как с пульта д/у, так и со стационарного
+                        (настенного)
+                        пульта управления. Выбор автоматики для роллет напрямую зависит от размера (ширины) роллеты и от
+                        ее
+                        веса.</p>
+                    <p>Также стоит учесть, что электропривод устанавливается на этапе сборки самой
+                        конструкции роллет. Поэтому уже установленную роллету будет сложно переделать.</p>
                 </div>
             </div>
         </section>
