before pull page 8

--- a/app/promotion_open.html
+++ b/app/promotion_open.html
@@ -89,6 +89,7 @@
 	
 		<section class="promotions_open">
 			<div class="top_block">
+				<img src="./image/top_bg.png" alt="">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-7">
@@ -109,7 +110,7 @@
 			<div class="top_promotion">
 				<div class="container">
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <div class="text_promotion">
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -120,7 +121,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-lg-5 offset-lg-1">
+                        <div class="col-md-5 offset-lg-1">
                             <div class="promotions__timer">
 								<span>До конца осталось:</span>
 								<ul class="timer d-flex" data-time="Sep 01 2019 00:00:00">
