--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
 					<li><a href="index.html" class="active">Главная</a></li>
 					<li><a href="about-us.html">Кто мы?</a></li>
 					<li><a href="roletta.html">Роллеты</a></li>
-					<li><a href="assortement.html">Ассортимент</a></li>
+					<li><a href="assortment.html">Ассортимент</a></li>
 					<li>
 						<a href="knowledge-base.html">База знаний
 							<span class="counter">10</span>
