add for diller desctop

--- a/app/for-diller.html
+++ b/app/for-diller.html
@@ -323,15 +323,39 @@
                     </div>
                     <div class="diller-box">
                         <div class="diller-box__circle">
-                            <span>01</span>
+                            <span>02</span>
                         </div>
                         <p class="title">Короб отдельно, полотно отдельно — для безопасной транспортировки</p>
                     </div>
                     <div class="diller-box">
                         <div class="diller-box__circle">
-                            <span>01</span>
+                            <span>03</span>
                         </div>
                         <p class="title">Полотно в коробе, вал отдельно - для компактной доставки</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="fd download-catalog">
+            <div class="container">
+                <div class="download-catalog__wrap bg-white-shadow">
+                    <div class="row">
+                        <div class="col-12 col-md-5 offset-lg-1">
+                            <h3 class="download-catalog__title">Скачайте прайсы с актуальными ценами на весь ассортимент
+                            </h3>
+                            <p>Цены обновлены 2 дня назад (28.05.2019)</p>
+                            <form class="download-catalog__form">
+                                <input type="text" class="input-light" placeholder="Введите ваше имя">
+                                <input type="text" class="input-light" placeholder="Введите ваш телефон">
+                                <input type="text" class="input-light" placeholder="Введите ваш E-mail">
+                                <button type="submit" class="btn btn-red">Скачать каталог
+                                </button>
+                            </form>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <img src="image/image-5.png" alt="" class="download-catalog__img">
+                        </div>
                     </div>
                 </div>
             </div>
