--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
 			<div class="menu__btn"><span></span></div>
 			<nav class="menu">
 				<ul class="menu__list">
-					<li><a href="#" class="active">Главная</a></li>
+					<li><a href="index.html" class="active">Главная</a></li>
 					<li><a href="about-us.html">Кто мы?</a></li>
 					<li><a href="roletta.html">Роллеты</a></li>
 					<li><a href="assortment.html">Ассортимент</a></li>
