--- a/app/who-we-are.html
+++ b/app/who-we-are.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
-    <title>Для диллеров</title>
+    <title>Кто мы?</title>
     <meta name='description' content="" />
     <meta name="keywords" content="" />
     <link rel="icon" type="image/x-icon" href="image/favicon.png" />
@@ -86,256 +86,132 @@
     </header>
 
     <main>
-        <section class="fd-topsect">
+        <section class="ww-topsect">
             <div class="container">
                 <ul class="bread-crumbs">
                     <li class="bread-crumbs__item"><a href="#">Главная</a></li>
-                    <li class="bread-crumbs__item"><span>Стать диллером</span></li>
+                    <li class="bread-crumbs__item"><span>Кто мы?</span></li>
                 </ul>
                 <div class="row">
-                    <div class="col-md-5">
-                        <p class="title-white">Кто может стать нашим диллером?</p>
+                    <div class="col-md-6">
+                        <p class="title-white">Comfortline – это</p>
+                        <p class="suubtitle">
+                            Производственно-торговая компания с 11 летним опытом на рынке роллет, ворот и автоматики
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="award">
+                            <img src="image/who-we-are/wwa-pic2.png" alt="image">
+                            <p>Лидер по скорости и качеству <span>в Украине.</span></p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="award">
+                            <img src="image/who-we-are/wwa-pic3.png" alt="image">
+                            <p>Золотой партнер Алютех <span>с 2012 года.</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <img class="main-pic" src="image/fd-image.png" alt="image">
-            <img class="phone-show" src="image/fd-image-phone-1.png" alt="image">
         </section>
 
-        <section class="fd-secondsect">
+        <section class="ww-secondsect">
             <div class="container">
-                <div class="fd-circles">
-                    <div class="diller-box">
-                        <div class="diller-box__circle">
-                            <img src="image/icons/leadership.svg" alt="icon">
+                <h3 class="title-section">
+                    На нашем счету
+                </h3>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="reckoning-box">
+                            <p class="title-text-border">34 795</p>
+                            <p>Защитных <br>
+                                роллет</p>
                         </div>
-                        <p class="title">Монтажник</p>
                     </div>
-                    <div class="diller-box">
-                        <div class="diller-box__circle">
-                            <img src="image/icons/group.svg" alt="icon">
+                    <div class="col-md-3">
+                        <div class="reckoning-box">
+                            <p class="title-text-border">9 569</p>
+                            <p>Алюминиевых <br>
+                                отливов</p>
                         </div>
-                        <p class="title">Бригада</p>
                     </div>
-                    <div class="diller-box">
-                        <div class="diller-box__circle">
-                            <img src="image/icons/enterprise.svg" alt="icon">
+                    <div class="col-md-3">
+                        <div class="reckoning-box">
+                            <p class="title-text-border">3 868</p>
+                            <p>Секционных <br>
+                                ворот</p>
                         </div>
-                        <p class="title">Компания</p>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="reckoning-box">
+                            <p class="title-text-border">886</p>
+                            <p>Въездных <br>
+                                ворот</p>
+                        </div>
                     </div>
                 </div>
-                <div class="fd-aftcircle">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h3 class="assortment-heading__title">Сейчас с нами работают<br>
-                                1057 диллеров со всей Украины</h3>
-                            <p>Самые активные диллеры делают по несколько заказов в день, а минимум – 1 заказ в месяц.
+            </div>
+        </section>
+
+        <section class="ww-thirdsect">
+            <div class="container">
+                <div class="info">
+                    <p class="assortment-heading__title">
+                        Наша диллерская сеть начисляет 1057 партнеров по всей Украине
+                    </p>
+                    <p class="dedcr">
+                        Это строительные и ремонтные компании, рабочие бригады
+                        и монтажники.
+                    </p>
+                    <a href="#" class="btn btn-red">Хотите стать диллером?</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="ww-team">
+            <div class="container">
+                <h3 class="title-section">В нашей команде 35 человек</h3>
+                <div class="slider-reviews slider-ww">
+                    <div class="slider-reviews__item">
+                        <div class="photo-box">
+                            <img class="photo" src="image/who-we-are/wwa-pic6.png" alt="image">
+                            <a href="#" class="social"><img src="image/who-we-are/fb.svg" alt="facebook"></a>
+                        </div>
+                        <div class="text-box">
+                            <p class="title">
+                                Константин Горюшковец
+                                <span>Директор Сomfortline</span>
                             </p>
                         </div>
-                        <div class="col-md-6">
-                            <p class="title-text-border bigtext">1057 <span>Диллеров</span></p>
+                    </div>
+                    <div class="slider-reviews__item">
+                        <div class="photo-box">
+                            <img class="photo" src="image/who-we-are/wwa-pic7.png" alt="image">
+                            <a href="#" class="social"><img src="image/who-we-are/fb.svg" alt="facebook"></a>
+                        </div>
+                        <div class="text-box">
+                            <p class="title">
+                                Константин Гарбунов
+                                <span>Начальник производства</span>
+                            </p>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="fd-main-reasons">
-            <div class="container">
-                <h2 class="title-white text-center">
-                    Основные причины стать нашим дилером
-                </h2>
-                <p class="left-arrow text-center">Сможете повысить доход</p>
-                <p class="right-arrow text-center">Не придётся краснеть перед клиентом за качество</p>
-                <a href="#" class="btn btn-red">Стать диллером</a>
-                <img src="image/fd-image-phone-2.png" alt="image" class="phone-show">
-            </div>
-        </section>
-
-        <section class="fd-foursect">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h3 class="title-section">Производство заказа занимает 3-7 дней</h3>
+                    <div class="slider-reviews__item">
+                        1
                     </div>
-                    <div class="col-md-6">
-                        <div class="orange-bg-text">
-                            <p>Нужно срочно? <br>Сделаем за 1 день</p>
-                            <img src="image/fd-image4.png" alt="background">
-                        </div>
+                    <div class="slider-reviews__item">
+                        1
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="fd-fivesect">
-            <div class="container">
-                <h3 class="title-section">Почему мы втрое быстрее любого нашего конкурента</h3>
-                <div class="fd-circles">
-                    <div class="diller-box">
-                        <div class="diller-box__circle">
-                            <img src="image/icons/orion_delivery-time.svg" alt="icon">
-                        </div>
-                        <p class="title">собственая система логистики</p>
+                    <div class="slider-reviews__item">
+                        1
                     </div>
-                    <div class="diller-box">
-                        <div class="diller-box__circle">
-                            <img src="image/icons/orion_delivery-time2.svg" alt="icon">
+                    <div class="container slider-dark__arrows">
+                        <button class="slider-dark__prev client-prev"></button>
+                        <div class="slick-counter"><span class="current"></span><span class="total"></span>
                         </div>
-                        <p class="title">Оперативно рассчитываем стоимость</p>
-                    </div>
-                    <div class="diller-box">
-                        <div class="diller-box__circle">
-                            <img src="image/icons/warehouse.svg" alt="icon">
-                        </div>
-                        <p class="title">Самый большой склад комплектующих в Украине</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="fd-sixsect">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-5">
-                        <div class="slider">
-                            <div class="slider__item">
-                                <div class="fd-slide">
-                                    <div class="left">
-                                        <p class="title">Обеспечим <br>образцами</p>
-                                        <p class="descr">Уже после первого заказа
-                                            мы обеспечим вас образцами для выездов на объект</p>
-                                        <div class="pic-box">
-                                            <img src="image/fd-image5.png" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="slider__item">
-                                <div class="fd-slide">
-                                    <div class="left">
-                                        <p class="title">Обеспечим <br>образцами</p>
-                                        <p class="descr">Уже после первого заказа
-                                            мы обеспечим вас образцами для выездов на объект</p>
-                                        <div class="pic-box">
-                                            <img src="image/fd-image5.png" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="container">
-                                <div class="col-md-12">
-                                    <div class="slider__arrows">
-                                        <button class="slider__prev"></button>
-                                        <div class="slick-counter"><span class="current"></span><span
-                                                class="total"></span>
-                                        </div>
-                                        <button class="slider__next"></button>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-md-6 offset-md-1 right">
-                        <p class="title">Предоставим<br>
-                            услуги</p>
-                        <p class="descr">Шеф-замер и шеф-монтаж, а также профессиональную консультацию по
-                            телефону</p>
-                        <div class="row">
-                            <div class="col-md-6 col-sm-6 col-6">
-                                <div class="pic-box">
-                                    <img src="image/fd-image6.png" alt="">
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-sm-6 col-6">
-                                <div class="pic-box">
-                                    <img src="image/fd-image7.png" alt="">
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="pic-box">
-                                    <img src="image/fd-image8.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </section>
-
-        <section class="fd-sevensect">
-            <div class="container">
-                <h3 class="title-white">Делаем отгрузки 24/7</h3>
-                <p>
-                    Это очень удобно, особенно когда к монтажу роллет нужно приступать ночью, например после закрытия
-                    торгового центра.
-                </p>
-            </div>
-        </section>
-
-        <section class="fd-eightsect">
-            <img src="image/fd-image10.png" alt="image">
-            <div class="container">
-                <h3 class="title-section">Мы строим прочные отношения со своими клиентами</h3>
-                <p>
-                    Идем на компромиссы и ищем индивидуальный подход к каждому клиенту
-                </p>
-            </div>
-        </section>
-
-        <section class="fd-ninesect">
-            <div class="container">
-                <p class="assortment-heading__title">Производим роллеты<br>
-                    в трех вариантах сборки
-                </p>
-                <p class="orangebg-text">
-                    На все варианты цена одинаковая.
-                    <img src="image/fd-image11.png" alt="image">
-                </p>
-                <div class="fd-circles">
-                    <div class="diller-box">
-                        <div class="diller-box__circle">
-                            <span>01</span>
-                        </div>
-                        <p class="title">Полотно уже в коробе - для быстрого монтажа</p>
-                    </div>
-                    <div class="diller-box">
-                        <div class="diller-box__circle">
-                            <span>02</span>
-                        </div>
-                        <p class="title">Короб отдельно, полотно отдельно — для безопасной транспортировки</p>
-                    </div>
-                    <div class="diller-box">
-                        <div class="diller-box__circle">
-                            <span>03</span>
-                        </div>
-                        <p class="title">Полотно в коробе, вал отдельно - для компактной доставки</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="fd download-catalog">
-            <div class="container">
-                <div class="download-catalog__wrap bg-white-shadow">
-                    <div class="row">
-                        <div class="col-12 col-md-5 offset-lg-1">
-                            <h3 class="download-catalog__title">Скачайте прайсы с актуальными ценами на весь ассортимент
-                            </h3>
-                            <p>Цены обновлены 2 дня назад (28.05.2019)</p>
-                            <form class="download-catalog__form">
-                                <input type="text" class="input-light" placeholder="Введите ваше имя">
-                                <input type="text" class="input-light" placeholder="Введите ваш телефон">
-                                <input type="text" class="input-light" placeholder="Введите ваш E-mail">
-                                <button type="submit" class="btn btn-red">Скачать каталог
-                                </button>
-                            </form>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <img src="image/image-5.png" alt="" class="download-catalog__img">
-                        </div>
+                        <button class="slider-dark__next client-next "></button>
                     </div>
                 </div>
             </div>
