--- a/app/about-us.html
+++ b/app/about-us.html
@@ -93,7 +93,7 @@
                     <li class="bread-crumbs__item"><span>Кто мы?</span></li>
                 </ul>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-8">
                         <p class="title-white">Comfortline – это</p>
                         <p class="suubtitle">
                             Производственно-торговая компания с 11 летним опытом на рынке роллет, ворот и автоматики
@@ -101,13 +101,13 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-6">
                         <div class="award">
                             <img src="image/who-we-are/wwa-pic2.png" alt="image">
                             <p>Лидер по скорости и качеству <span>в Украине.</span></p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-6">
                         <div class="award">
                             <img src="image/who-we-are/wwa-pic3.png" alt="image">
                             <p>Золотой партнер Алютех <span>с 2012 года.</span></p>
@@ -123,28 +123,28 @@
                     На нашем счету
                 </h3>
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <div class="reckoning-box">
                             <p class="title-text-border">34 795</p>
                             <p>Защитных <br>
                                 роллет</p>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <div class="reckoning-box">
                             <p class="title-text-border">9 569</p>
                             <p>Алюминиевых <br>
                                 отливов</p>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <div class="reckoning-box">
                             <p class="title-text-border">3 868</p>
                             <p>Секционных <br>
                                 ворот</p>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <div class="reckoning-box">
                             <p class="title-text-border">886</p>
                             <p>Въездных <br>
@@ -165,6 +165,7 @@
                         Это строительные и ремонтные компании, рабочие бригады
                         и монтажники.
                     </p>
+                    <img src="image/who-we-are/wwa-phone2.png" alt="image" class="phone-show">
                     <a href="#" class="btn btn-red">Хотите стать диллером?</a>
                 </div>
             </div>
@@ -235,10 +236,10 @@
                         </div>
                     </div>
                     <div class="container slider-dark__arrows">
-                        <button class="slider-dark__prev client-prev"></button>
+                        <button class="slider-dark__prev slider-ww-prev"></button>
                         <div class="slick-counter"><span class="current"></span><span class="total"></span>
                         </div>
-                        <button class="slider-dark__next client-next "></button>
+                        <button class="slider-dark__next slider-ww-next"></button>
                     </div>
                 </div>
             </div>
@@ -593,9 +594,87 @@
             </div>
         </section>
 
-        <section class="vacancy">
+        <section class="ww-vacancy">
+            <div class="container">
+                <h2 class="title-text-border">Вакансии</h2>
+                <div class="cards-dark">
+                    <div class="row no-gutters">
+                        <div class="col-md-7">
+                            <div class="left-sect">
+                                <p class="title">Вакансия 1</p>
+                                <p class="descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate
+                                    eu
+                                    pharetra
+                                    nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit
+                                </p>
+                                <a href="#">Перейти <img src="image/who-we-are/wwa-arrow.svg" alt="arrow"></a>
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="pic-box">
+                                <img src="image/who-we-are/wwa-pic10.png" alt="image">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cards-dark">
+                    <div class="row no-gutters">
+                        <div class="col-md-7">
+                            <div class="left-sect">
+                                <p class="title">Вакансия 2</p>
+                                <p class="descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate
+                                    eu
+                                    pharetra
+                                    nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit
+                                </p>
+                                <a href="#">Перейти <img src="image/who-we-are/wwa-arrow.svg" alt="arrow"></a>
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="pic-box">
+                                <img src="image/who-we-are/wwa-pic11.png" alt="image">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-            
+        <section class="ww-map">
+            <div class="container">
+                <h2 class="title-text-border">Контакты</h2>
+            </div>
+            <div class="map-box">
+                <div class="container">
+                    <div class="change-mark-map">
+                        <div class="mark-box active">
+                            <p class="title">Главный офис</p>
+                            <p class="descr">г. Киев, ул. Констанитновская 72</p>
+                            <a href="tel:+30 044 332 77 72">+30 044 332 77 72</a>
+                        </div>
+                        <div class="mark-box">
+                            <p class="title">Склад</p>
+                            <p class="descr">г. Киев, проспект Героев Сталинграда 98</p>
+                            <a href="tel:+30 044 332 77 72">+30 044 245 54 55</a>
+                        </div>
+                    </div>
+                    <div class="map-link">
+                        <div>
+                            <p>г. Киев, ул. Констанитновская 72
+                            </p>
+                            <a href="#"> Открыть Google Карты</a>
+                        </div>
+                        <img src="image/who-we-are/map-icon.png" alt="image">
+
+                    </div>
+                </div>
+                <img src="image/who-we-are/map-pic.png" alt="map">
+                <img class="tablet-mappic" src="image/who-we-are/map-pic-tablet.png" alt="image">
+                <img class="phone-mappic" src="image/who-we-are/map-pic-phone.png" alt="image">
+            </div>
+
         </section>
 
     </main>
