--- a/app/knowledge-base.html
+++ b/app/knowledge-base.html
@@ -109,7 +109,44 @@
         <section class="base-content">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3">
+                        <div class="base-filter">
+                            <ul class="base-filter__list">
+                                <li class="active">
+                                    <p>Ролеты</p>
+                                    <!-- <ul class="base-filter__sublist">
+                                        <li>
+                                            Ролеты защитные
+                                        </li>
+                                        <li>
+                                            Гаражные роллеты
+                                        </li>
+                                        <li>
+                                            Роллеты решетки
+                                        </li>
+                                        <li>
+                                            Автоматика
+                                        </li>
+                                    </ul> -->
+                                </li>
+                                <li>
+                                    <p>Ворота<br> секционные</p>
+                                </li>
+                                <li>
+                                    <p>Ворота<br> въездные</p>
+                                </li>
+                                <li>
+                                    <p>Алюминиевые въездные ворота Prestige</p>
+                                </li>
+                                <li>
+                                    <p>Автоматика<br> для ворот</p>
+                                </li>
+                                <li>
+                                    <p>Шлагбаумы</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="col-lg-9">
                         <div class="base-tabs">
                             <ul class="tab-nav nav nav-pills" id="pills-tab" role="tablist">
